--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
     	<artifactId>spring-websocket</artifactId>
     	<version>4.3.14.RELEASE</version>
 	</dependency>
+	<dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+       <artifactId>jackson-databind</artifactId>
+       <version>2.5.4</version>
+   </dependency>
   </dependencies>
   <build>
     <finalName>itthumb</finalName>
